examples/rejections/canisters/some_service/index.did
service: () -> {
    reject: (text) -> (empty) query;
    accept: () -> (bool) query;
    error: () -> (empty) query;
}
